[gd_scene load_steps=21 format=2]

[ext_resource path="res://Assets/BodoniFLF-Roman.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/back.png" type="Texture" id=2]
[ext_resource path="res://Payment/Payment.gd" type="Script" id=3]
[ext_resource path="res://Payment/Photos/bitcoin.png" type="Texture" id=4]
[ext_resource path="res://Assets/copy2.png" type="Texture" id=6]
[ext_resource path="res://Assets/copy3.png" type="Texture" id=7]
[ext_resource path="res://Assets/copy.png" type="Texture" id=8]
[ext_resource path="res://Assets/paste.png" type="Texture" id=9]
[ext_resource path="res://Assets/help.png" type="Texture" id=10]
[ext_resource path="res://Assets/buy.png" type="Texture" id=11]
[ext_resource path="res://Assets/theme.tres" type="Theme" id=12]
[ext_resource path="res://Assets/internet_lost.png" type="Texture" id=13]

[sub_resource type="DynamicFontData" id=6]
font_path = "res://Assets/BodoniFLF-Roman.ttf"

[sub_resource type="DynamicFont" id=5]
size = 32
font_data = SubResource( 6 )

[sub_resource type="DynamicFontData" id=4]
font_path = "res://Assets/BodoniFLF-Roman.ttf"

[sub_resource type="DynamicFont" id=7]
size = 64
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = SubResource( 4 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 5 )

[sub_resource type="Theme" id=1]
default_font = SubResource( 5 )

[sub_resource type="DynamicFont" id=8]
size = 32
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=9]

[node name="Payment" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.796078, 0.796078, 0.796078, 1 )

[node name="Label_select" type="Label" parent="."]
self_modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -485.0
margin_top = -285.0
margin_right = 72.0
margin_bottom = -229.0
custom_fonts/font = SubResource( 5 )
text = "Choose a method and pay before time's up!"
valign = 1

[node name="Label_time" type="Label" parent="."]
self_modulate = Color( 0, 0, 1, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 296.0
margin_top = -285.0
margin_right = 504.0
margin_bottom = -216.0
custom_fonts/font = SubResource( 7 )
text = "00 : 00"
valign = 1

[node name="paymentList" type="OptionButton" parent="."]
margin_left = 111.0
margin_top = 96.0
margin_right = 392.0
margin_bottom = 170.0
theme = SubResource( 2 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 0.0235294, 0.803922, 0.129412, 1 )
custom_fonts/font = SubResource( 5 )

[node name="currency_logo" type="TextureButton" parent="."]
margin_left = 4.0
margin_top = 84.0
margin_right = 105.0
margin_bottom = 177.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 4 )
expand = true

[node name="Label_price" type="Label" parent="."]
self_modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -504.0
margin_top = -94.0
margin_right = -400.0
margin_bottom = -38.0
custom_fonts/font = SubResource( 5 )
text = "Price:"
valign = 1

[node name="price" type="LineEdit" parent="."]
margin_left = 112.0
margin_top = 192.0
margin_right = 920.0
margin_bottom = 266.0
custom_fonts/font = SubResource( 5 )
editable = false

[node name="wallet_address" type="LineEdit" parent="."]
margin_left = 400.0
margin_top = 96.0
margin_right = 920.0
margin_bottom = 170.0
custom_fonts/font = SubResource( 5 )
editable = false

[node name="Label_txid" type="Label" parent="."]
self_modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -504.0
margin_top = -24.0
margin_right = 251.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 5 )
text = "Input your Transaction Hash ID (TXID):"
valign = 1

[node name="txid" type="LineEdit" parent="."]
margin_left = 8.0
margin_top = 347.0
margin_right = 920.0
margin_bottom = 421.0
custom_fonts/font = SubResource( 5 )

[node name="Verify" type="TextureButton" parent="."]
self_modulate = Color( 0.768627, 0.0431373, 1, 1 )
margin_left = 872.0
margin_top = 488.0
margin_right = 1013.0
margin_bottom = 582.0
theme = SubResource( 1 )
texture_normal = ExtResource( 11 )
expand = true
__meta__ = {
"_edit_group_": true
}

[node name="Back" type="TextureButton" parent="."]
margin_left = 8.0
margin_top = 482.0
margin_right = 208.0
margin_bottom = 576.0
theme = SubResource( 1 )
texture_normal = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_group_": true
}

[node name="help" type="TextureButton" parent="."]
self_modulate = Color( 0.682353, 0.890196, 0.352941, 1 )
margin_left = 336.0
margin_top = 488.0
margin_right = 464.0
margin_bottom = 582.0
theme = SubResource( 1 )
texture_normal = ExtResource( 10 )
expand = true
__meta__ = {
"_edit_group_": true
}

[node name="Timer" type="Timer" parent="."]

[node name="copy_wallet_address" type="TextureButton" parent="."]
margin_left = 928.0
margin_top = 88.0
margin_right = 1009.0
margin_bottom = 180.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 7 )
expand = true

[node name="copy_price" type="TextureButton" parent="."]
margin_left = 928.0
margin_top = 184.0
margin_right = 1009.0
margin_bottom = 276.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="copy_all" type="TextureButton" parent="."]
margin_left = 648.0
margin_top = 488.0
margin_right = 729.0
margin_bottom = 580.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="paste_txid" type="TextureButton" parent="."]
margin_left = 928.0
margin_top = 332.0
margin_right = 1009.0
margin_bottom = 424.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 9 )
expand = true

[node name="HTTPRequest2" type="HTTPRequest" parent="."]

[node name="AcceptDialog" type="AcceptDialog" parent="."]
self_modulate = Color( 1, 0, 0, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -244.0
margin_top = -148.0
margin_right = 244.0
margin_bottom = 148.0
theme = ExtResource( 12 )
popup_exclusive = true
window_title = "Error!"
dialog_text = "Connection lost!"
dialog_autowrap = true

[node name="txidDialog" type="AcceptDialog" parent="."]
self_modulate = Color( 0, 0.929412, 0.231373, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -499.5
margin_top = -178.5
margin_right = 499.5
margin_bottom = 178.5
theme = ExtResource( 12 )
popup_exclusive = true
window_title = "Error!"
dialog_text = "Your transaction ID does not exist!

Copy the transaction ID and then enter it in the desired place.

Make sure your internet connection is also established."
dialog_autowrap = true

[node name="Sprite" type="Sprite" parent="txidDialog"]
position = Vector2( 904, 266 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 9 )

[node name="netDialog" type="AcceptDialog" parent="."]
self_modulate = Color( 0.956863, 0.572549, 1, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -434.0
margin_top = -186.0
margin_right = 434.0
margin_bottom = 186.0
theme = ExtResource( 12 )
popup_exclusive = true
window_title = "Error!"
dialog_text = "The program cannot communicate with the cryptocurrency price site.

Try again later or contact support in the \"about\" section."
dialog_autowrap = true

[node name="Sprite" type="Sprite" parent="netDialog"]
position = Vector2( 760, 268 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 13 )

[node name="priceDialog" type="AcceptDialog" parent="."]
self_modulate = Color( 0, 0.529412, 1, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -384.5
margin_top = -180.0
margin_right = 384.5
margin_bottom = 180.0
theme = ExtResource( 12 )
popup_exclusive = true
window_title = "Error!"
dialog_text = "This payment method is not possible now.

Choose another mathod to pay."
dialog_autowrap = true

[node name="Help_section" type="Popup" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="Help_section"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.796078, 0.796078, 0.796078, 1 )

[node name="Label_select" type="RichTextLabel" parent="Help_section"]
self_modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -485.0
margin_top = -285.0
margin_right = 496.0
margin_bottom = 180.0
custom_fonts/normal_font = SubResource( 8 )
text = "You must first refer to this section so that a purchase order can be prepared for you according to the current price of the digital currency you want.
After viewing the price, pay the amount to the address which is in front of the name of the digital currency.
After paying the amount, enter the transaction ID.
All these steps must be done before your time runs out; Otherwise, the payment will not be accepted.

Don't try to cheat!
The program finds out the time and date through the Internet, and if your payment receipt is not received at the desired time and date, it will not be accepted."

[node name="Exit_help" type="TextureButton" parent="Help_section"]
margin_left = 8.0
margin_top = 482.0
margin_right = 208.0
margin_bottom = 576.0
theme = SubResource( 9 )
texture_normal = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_group_": true
}

[connection signal="item_selected" from="paymentList" to="." method="_on_paymentList_item_selected"]
[connection signal="pressed" from="currency_logo" to="." method="_on_currency_logo_pressed"]
[connection signal="text_changed" from="txid" to="." method="_on_txid_text_changed"]
[connection signal="pressed" from="Verify" to="." method="_on_Verify_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="help" to="." method="_on_help_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="copy_wallet_address" to="." method="_on_copy_wallet_address_pressed"]
[connection signal="pressed" from="copy_price" to="." method="_on_copy_price_pressed"]
[connection signal="pressed" from="copy_all" to="." method="_on_copy_all_pressed"]
[connection signal="pressed" from="paste_txid" to="." method="_on_paste_txid_pressed"]
[connection signal="request_completed" from="HTTPRequest2" to="." method="_on_HTTPRequest2_request_completed"]
[connection signal="confirmed" from="AcceptDialog" to="." method="_on_AcceptDialog_confirmed"]
[connection signal="confirmed" from="txidDialog" to="." method="_on_txidDialog_confirmed"]
[connection signal="visibility_changed" from="txidDialog" to="." method="_on_txidDialog_visibility_changed"]
[connection signal="confirmed" from="priceDialog" to="." method="_on_priceDialog_confirmed"]
[connection signal="visibility_changed" from="priceDialog" to="." method="_on_priceDialog_visibility_changed"]
[connection signal="pressed" from="Help_section/Exit_help" to="." method="_on_Exit_help_pressed"]
